Fix overflow of compose attachments list in Opera and IE7 browsers

--- a/skins/classic/iehacks.css
+++ b/skins/classic/iehacks.css
@@ -150,6 +150,16 @@ body.iframe div.messageheaderbox
   height: expression((parseInt(this.parentNode.offsetHeight)-1-parseInt(document.getElementById('compose-headers').offsetHeight))+'px');
 }
 
+#compose-attachments ul li
+{
+  width: 1000px; /* for IE7 */
+}
+
+#compose-attachments li a
+{
+  float: left; /* for IE7 */
+}
+
 #messagelist
 {
   width: inherit;
