--- a/skins/classic/mail.css
+++ b/skins/classic/mail.css
@@ -1477,8 +1477,7 @@ input.from_address
   text-indent: -5000px;
   width: 17px;
   height: 16px;
-  display: block;
-  float: left;
+  display: inline-block;
   text-decoration: none;
 }
 
